# MCP-Based-Dual-AI-Agent-Cops-and-Robbers

./: .env-example  .gitignore  MCP_Assignment_English.md  gmail.md  pyproject.toml  software_submission_guidelines.md  work_plan.md
.github/workflows/: ci.yml
config/: config.json  rate_limits.json
docs/: PLAN.md  PRD.md  PRD_game_engine.md  PRD_mcp_servers.md  PRD_nlp_communication.md  PRD_reporting.md  PRD_strategy.md  PROMPT_LOG.md  TODO.md
src/: __init__.py  version.py
src/api_gateway/: __init__.py
src/game/: __init__.py  actions.py  barriers.py  board.py  exceptions.py  fog_of_war.py  full_game.py  game_state.py  movement.py  observed_state.py  scorer.py  sub_game.py  turn_manager.py
src/gui/: __init__.py
src/mcp_servers/: __init__.py  auth_middleware.py  cop_server.py  message_store.py  server_tools.py  thief_server.py
src/orchestrator/: __init__.py  belief_state.py  client.py  llm_loop.py  nlp_parser.py  prompt_builder.py
src/reporting/: __init__.py
src/sdk/: __init__.py  config_validator.py  game_sdk.py  game_sdk_reporting_mixin.py
src/strategy/: __init__.py
tests/: conftest.py  test_barriers.py  test_belief_state.py  test_board.py  test_client.py  test_config_validator.py  test_cop_server.py  test_file_size.py  test_fog_of_war.py  test_game_sdk.py  test_llm_loop.py  test_movement.py  test_nlp_parser.py  test_scorer.py  test_sub_game.py  test_thief_server.py  test_turn_manager.py  test_version.py
tests/integration/: test_sanity_2x2.py  test_sanity_3x3.py
